labelstudio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labelstudio
spec:
  replicas: 1
  selector:
    matchLabels:
      component: labelstudio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: labelstudio
    spec:
      containers:
        - name: labelstudio
          image: heartexlabs/label-studio:latest
          # image: heartexlabs/label-studio:1.0.2
          # image: heartexlabs/label-studio:ubi_develop
          imagePullPolicy: Always
          stdin: true
          tty: true
          #command: ["./deploy/wait-for-postgres.sh"]
          # args: ["postgres", "bash", "/label-studio/deploy/start_label_studio.sh"]

          volumeMounts:
            - name: labelstudio-data-vol
              mountPath: /label-studio/data
              
      volumes:
        - name: labelstudio-data-vol
          persistentVolumeClaim:
            claimName: labelstudio-data-pvc
