labelstudio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: labelstudio
spec:
  ports:
    - port: 8080
  selector:
    component: labelstudio
  clusterIP: None
